# mindroom

./: .coderabbit.yaml  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_PROMPT_RUFF_FIXES.md  AGENT_STARTUP_PROMPT.md  ARCH-CONSULT.md  ARCH-DECISION-CLAUDE.md  ARCH-DECISION-CODEX.md  ARCH-SMELL-DECISION-CLAUDE.md  ARCH-SMELL-DECISION-CODEX.md  ARCH-VALIDATION.md  CHANGES_SUMMARY.md  CLAUDE.md  CRITIQUE-CLAUDE.md  CRITIQUE-CODEX.md  CRITIQUE-claude.md  CRITIQUE-codex.md  DEBATE.md  DEDUP_PLAN.md  DEMO_SCRIPTS.md  DEPLOYMENT.md  DOCS_AUDIT.md  FINAL-PLAN.md  FINDINGS.md  FORK_CHANGES.md  IMPLEMENT-REPORT.md  IMPLEMENTATION-NOTES.md  IMPLEMENTATION_REALITY_CHECK.md  IMPLEMENTER-RESPONSE.md  IMPLEMENTER-STATUS.md  ISSUE-239-FINDINGS.md  JUSTFILE_MIGRATION.md  LIBRECHAT_ANALYSIS.md  MASTER_PLAN.md  MULTI_AGENT_CHANGES.md  (+114 more)
.claude/: FUZZ-CAMPAIGN-STATUS.md  REPORT-control-plane.md  REPORT-impl.md  REPORT-issue-239-240.md  REPORT-issue-241.md  REPORT-issue-245.md  REPORT-issue-246-redesign.md  REPORT-matrix-ingestion-limits.md  REPORT-room-authz-identity.md  REPORT-saas-rls-sso.md  REPORT-scheduler-authz-limits.md  REPORT.md  TASK.md  THREAD-EDIT-INTEGRITY-STATUS.md  TRIAGE-ROUND1.md  TRIAGE-ROUND2.md  spawn-prompt-cli-onboarding.md  spawn-prompt-docs-review.md
.gemini/: styleguide.md
.github/: plugin-fleet.json
.greptile/: config.json  files.json  rules.md
.prompts/: code-debate.md  docs-review.md  duplication-audit.md  pr-review.md
Casks/: mindroom.rb
demos/: README.md  demo_router_test.py  quick_test.py  test_router.py  test_router_structured.py
deploy/: .env.template  .env.test1  .env.test2  .gitignore  AUTHELIA-GUIDE.md  BRIDGE_MANAGER.md  Dockerfile.admin-dashboard  Dockerfile.backend  Dockerfile.base  Dockerfile.customer-portal  Dockerfile.dokku-provisioner  Dockerfile.frontend  Dockerfile.widget  FEDERATION.md  MATRIX-SECURITY.md  README-AUTH.md  README-DOCKER.md  README.md  autoupdate.sh  bridge.py  default-deploy.sh  deploy  deploy.py  deploy_auth.py  docker-compose.auth-traefik.yml  docker-compose.auth.yml  docker-compose.authelia-simple.yml  docker-compose.authelia.yml  docker-compose.matrix-only.yml  docker-compose.platform.yml  docker-compose.synapse.yml  docker-compose.tuwunel.yml  docker-compose.wellknown.yml  docker-compose.yml  instance_manager.py  instances.json  instances.yaml  mindroom-autoupdate.service  mindroom-autoupdate.timer  mindroom-backend-manual.service  (+17 more)
docs/: TESTING.md  VOICE_MESSAGES.md  agent-callbacks.md  agent_configuration.md  ai_team_mode_decision.md  attachments.md  authorization.md  avatars.md  chat-commands.md  cli.md  dashboard.md  external-triggers.md  getting-started.md  gmail_agno_setup.md  gmail_integration_evaluation.md  gmail_mcp_comparison.md  gmail_oauth_deployment.md  gmail_setup.md  google_integration_user_guide.md  google_oauth_setup_admin.md  google_oauth_simple.md  hooks.md  images.md  index.md  integration_plan.md  integrations.md  interactive.md  ios-beta.md  knowledge.md  matrix-space.md  mcp.md  memory.md  oauth-framework.md  openai-api.md  openclaw.md  pitches.md  plugins.md  privacy.md  run_markdown_code_runner.py  scheduling.md  (+8 more)
examples/: README.md  demo.py  (+2 more)
saas-platform/platform-backend/: FINAL_TEST_REPORT.md  README.md  TEST_COVERAGE_REPORT.md  TEST_QUALITY_ANALYSIS.md  __init__.py  main.py  openapi.json  pyproject.toml  pytest.ini
saas-platform/platform-backend/backend/: __init__.py  config.py  db_utils.py  deps.py  error_utils.py  k8s.py  models.py  process.py  provisioner_utils.py
saas-platform/platform-backend/backend/routes/: __init__.py  accounts.py  admin.py  health.py  instances.py  provisioner.py  sso.py  stripe_routes.py  subscriptions.py  usage.py  webhooks.py
saas-platform/platform-backend/scripts/: export_openapi.py
saas-platform/platform-backend/src/: main.py
saas-platform/platform-backend/src/backend/: auth_monitor.py  config.py  db_utils.py  deps.py  entitlements.py  k8s.py  metrics.py  models.py  openrouter.py  pricing.py  process.py
saas-platform/platform-backend/src/backend/middleware/: __init__.py  audit_logging.py
saas-platform/platform-backend/src/backend/routes/: accounts.py  admin.py  gdpr.py  health.py  instances.py  local_mindroom.py  matrix_oidc.py  pricing.py  provisioner.py  sso.py  stripe_routes.py  subscriptions.py  usage.py  webhooks.py
saas-platform/platform-backend/src/backend/services/: instances_data.py  provisioner_service.py
saas-platform/platform-backend/src/backend/tasks/: __init__.py  cleanup.py  usage_metrics.py
saas-platform/platform-backend/src/backend/utils/: audit.py  log_sanitizer.py  logger.py
saas-platform/platform-backend/tests/: conftest.py  stripe_mock.py  test_accounts.py  test_admin.py  test_admin_account_deletion.py  test_admin_allowlist.py  test_admin_rate_limit.py  test_audit_redaction.py  test_auth_monitor.py  test_bearer_token_parsing.py  test_cors_headers.py  test_deps.py  test_entitlements.py  test_gdpr.py  test_instances.py  test_instances_data.py  test_matrix_oidc.py  test_metrics_endpoint.py  test_multitenancy_security.py  test_openapi_export.py  test_openrouter.py  test_pricing.py  test_provisioner.py  test_provisioner_auth.py  test_provisioner_extended.py  test_provisioner_integration.py  test_provisioner_rate_limit.py  test_provisioner_real.py  test_rate_limit_sso.py  test_request_size_limit.py  test_security_headers_and_hosts.py  test_sso_cookie_attrs.py  test_stripe_integration.py  test_stripe_routes.py  test_stripe_utils.py  test_subscription_lifecycle_cleanup.py  test_subscriptions.py  test_usage.py  test_usage_metrics.py  test_user_rate_limit.py  (+2 more)
widget/backend/: pyproject.toml  requirements.txt
widget/backend/src/: main.py
widget/backend/src/api/: credentials.py  credentials_manager.py  gmail_config.py  google_auth.py  google_integration.py  google_setup_wizard.py  google_tools_helper.py  homeassistant_integration.py  integrations.py  tools.py
widget/backend/tests/: __init__.py  conftest.py  test_api.py  test_credentials_api.py  test_file_watcher.py
(+3739 files in other folders)
