[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "mindroom"
version = "0.1.0"
description = "A universal interface for AI agents with persistent memory, where every conversation has a home"
readme = "README.md"
authors = [
  { name = "mindroom team" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "agentql",                                                                                           # for AgentQL tool
  "agno[anthropic,google,ollama,openai,sql,ddg,arxiv,yfinance,newspaper,github,docker,duckdb]>=1.7.6",
  "apify-client>=1.12.2",
  "arxiv",                                                                                             # for Arxiv tool
  "atlassian-python-api",                                                                              # for ConfluenceTools
  "baidusearch",                                                                                       # for BaiduSearchTools
  "boto3>=1.40.8",                                                                                     # for AWSLambdaTools and AWSSESTool
  "browserbase",                                                                                       # for Browserbase tool
  "cartesia",                                                                                          # for Cartesia voice AI tool
  "chromadb>=1.0.15",
  "composio-agno",
  "crawl4ai>=0.7.3",
  "croniter>=6",
  "daytona",                                                                                           # for Daytona tool
  "diskcache>=5.6.3",
  "e2b-code-interpreter",
  "elevenlabs",
  "exa-py",                                                                                            # for Exa tool
  "fal-client",                                                                                        # for Fal tool
  "fastapi>=0.116.1",
  "ffmpeg",
  "firecrawl-py",
  "google-api-python-client>=2.178",
  "google-auth>=2.40.3",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2.2",
  "google-genai",                                                                                      # for Gemini tool
  "google-maps-places",                                                                                # for Google Maps tool
  "google-search-results>=2.4.2",
  "googlemaps",                                                                                        # for Google Maps tool
  "googlesearch-python",                                                                               # for Google Search tool
  "groq>=0.31",
  "httpx>=0.27",                                                                                       # for Jina, Telegram, and Searxng tools
  "jira>=3.10.5",
  "linkup-sdk>=0.2.8",
  "loguru>=0.7.3",
  "lumaai",                                                                                            # for Luma Labs tool
  "markdown>=3.7",                                                                                     # for HTML formatting in Matrix messages
  "matrix-nio>=0.24",
  "mcp[cli]>=1.12.4",
  "mem0ai>=0.1.115",
  "moviepy",
  "oxylabs",                                                                                           # for Oxylabs tool
  "pandas>=2.2",                                                                                       # for Pandas data analysis tool
  "playwright",                                                                                        # for AgentQL tool
  "praw",                                                                                              # for Reddit tool
  "py-trello",                                                                                         # for Trello tool
  "pycountry",                                                                                         # for Google Search tool
  "pydantic>=2",
  "pygithub>=2.5",                                                                                     # for GitHub tool
  "pypdf",                                                                                             # for Arxiv tool
  "python-dotenv>=1",
  "pytz",                                                                                              # for Cal.com tool
  "pyyaml>=6",
  "replicate>=1.0.7",
  "requests",                                                                                          # for Cal.com tool
  "resend",
  "rich",                                                                                              # for CLI output
  "scrapegraph-py",                                                                                    # for ScrapeGraph tool
  "slack-sdk",                                                                                         # for Slack tool
  "spider-client",                                                                                     # for Spider tool
  "spotipy>=2.25.1",
  "structlog>=24.1",                                                                                   # for structured logging
  "tavily-python",                                                                                     # for Tavily tool
  "todoist-api-python",
  "tweepy",                                                                                            # for Twitter/X tool
  "twilio",
  "typer>=0.16",
  "uvicorn>=0.35",
  "watchdog>=6",
  "wikipedia",                                                                                         # for Wikipedia tool (required by agno.tools.wikipedia)
  "youtube-transcript-api",                                                                            # for YouTube tool
  "zep-cloud>=3.3",
]

urls.documentation = "https://github.com/basnijholt/mindroom"
urls.homepage = "https://github.com/basnijholt/mindroom"
urls.repository = "https://github.com/basnijholt/mindroom"

scripts.mindroom = "mindroom.cli:main"

[dependency-groups]
dev = [
  "aioresponses>=0.7.8",
  "mypy>=1.17",
  "pre-commit>=4.2",
  "pre-commit-uv>=4.1.4",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "ruff>=0.12.5",
  "types-markdown>=3.7",
  "types-pyyaml>=6.0.12.20250516",
  "types-requests>=2.32.4.20250611",
]

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.wheel]
packages = [ "src/mindroom" ]

[tool.ruff]
target-version = "py312"

line-length = 120
lint.select = [
  "ALL",
]
lint.ignore = [
  "B905",    # `zip()` without an explicit `strict=` parameter
  "BLE001",  # Do not catch blind exception
  "D107",    # Missing docstring in `__init__`
  "D401",    # First line of docstring should be in imperative mood
  "D402",    # First line should not be the function's signature
  "E501",    # Line too long
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default value
  "FBT003",  # Boolean positional value in call
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "PD901",   # df is a bad variable name. Be kinder to your future self.
  "PLR0913", # Too many arguments to function call (N > 5)
  "PLR2004", # Magic value used
  "PLW0603", # Using the global statement to update `X` is discouraged
  "S101",    # Use of assert detected
  "S603",    # `subprocess` call: check for execution of untrusted input
  "S607",    # Starting a process with a partial executable path
  "SLF001",  # Private member accessed
  "T20",     # flake8-print
  "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...`
  "TD003",   # Missing issue link on the line following this TODO
]
lint.per-file-ignores."src/mindroom/tools/*" = [
  "PLC0415", #`import` should be at the top-level of a file"
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = "test_*.py"
asyncio_mode = "auto"
pythonpath = [ "src" ]
addopts = """
    -vvv
    --cov=mindroom
    --cov-report term
    --cov-report html
    --cov-report xml
    --asyncio-mode=strict
    --timeout 60
    --durations 20
"""

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING",
  "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
files = [ "src", "tests" ]

[[tool.mypy.overrides]]
module = "nio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mem0.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "diskcache.*"
ignore_missing_imports = true

# Enable strict typing for tests too - no shortcuts!

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.vcs]
method = "git"
match = [ "v*" ]
default-tag = "0.0.0"
