[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "mindroom"
description = "A universal interface for AI agents with persistent memory, where every conversation has a home"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "mindroom team" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "agentql",                                           # for AgentQL tool
  "agno[anthropic,google,ollama,openai]>=2.4.7",
  "aiofiles",                                          # for voice message handling
  "aiohttp",                                           # for voice message STT API calls
  "anthropic>=0.70",
  "apify-client>=1.12.2; platform_machine!='aarch64'", # for Apify tool (no manylinux aarch64 wheels for impit dep)
  "arxiv",                                             # for Arxiv tool
  "atlassian-python-api",                              # for Confluence tool
  "baidusearch",                                       # for BaiduSearch tool
  "beautifulsoup4",                                    # for Website tool
  "boto3>=1.40.8",                                     # for AWS Lambda and AWS SES tools
  "browserbase",                                       # for Browserbase tool
  "cartesia",                                          # for Cartesia tool
  "cerebras-cloud-sdk>=1.46",                          # for Cerebras model
  "chromadb>=1.0.15",
  "composio-agno",                                     # for Composio tool
  "crawl4ai>=0.7.3",                                   # for Crawl4AI tool
  "cron-descriptor>=1.4.5",
  "croniter>=6",
  "daytona",                                           # for Daytona tool
  "ddgs",                                              # for DuckDuckGo tool
  "diskcache>=5.6.3",
  "docker",                                            # for Docker tool
  "duckdb",                                            # for DuckDB tool
  "e2b-code-interpreter",                              # for E2B tool
  "elevenlabs",                                        # for ElevenLabs tool
  "exa-py",                                            # for Exa tool
  "fal-client",                                        # for Fal tool
  "fastapi[standard]>=0.116.1",                        # for widget API and future API endpoints
  "firecrawl-py>=3",                                   # for Firecrawl tool
  "google-api-python-client>=2.178",                   # for Google Calendar, Google Sheets, Gmail tools, widget API
  "google-auth>=2.40.3",                               # for Google Calendar, Google Sheets, Gmail tools, widget API
  "google-auth-httplib2>=0.2",                         # for Google Calendar, Google Sheets, Gmail tools, widget API
  "google-auth-oauthlib>=1.2.2",                       # for Google Calendar, Google Sheets, Gmail tools, widget API OAuth flow
  "google-cloud-bigquery",                             # for Google BigQuery tool
  "google-genai",                                      # for Gemini model
  "google-maps-places",                                # for Google Maps tool
  "google-search-results>=2.4.2",                      # for SerpApi tool
  "googlemaps",                                        # for Google Maps tool
  "groq>=0.31",                                        # for Groq model
  "httpx>=0.27",                                       # for Jina, Telegram, Searxng tools, widget API
  "humanize>=4.12.3",
  "jira>=3.10.5",                                      # for Jira tool
  "json5>=0.13",
  "linkup-sdk>=0.2.8",                                 # for Linkup tool
  "loguru>=0.7.3",
  "lumaai",                                            # for LumaLabs tool
  "lxml-html-clean",                                   # for Newspaper4K tools
  "markdown>=3.7",                                     # for HTML formatting in Matrix messages
  "matplotlib",                                        # for Visualization tool
  "matrix-nio>=0.24",
  "mcp[cli]>=1.12.4",                                  # for MCP tool
  "mem0ai>=0.1.115",                                   # for Mem0 tool
  "moviepy",                                           # for MoviePy tool
  "neo4j",                                             # for Neo4j tool
  "newspaper4k",                                       # for Newspaper4K tool
  "notion-client",                                     # for Notion tool
  "openai",                                            # for OpenAI and DALL-E tools, Morph model
  "openbb",                                            # for OpenBB tool
  "oxylabs",                                           # for Oxylabs tool
  "pandas>=2.2",                                       # for Pandas tool
  "playwright",                                        # for AgentQL and Browserbase tools
  "praw",                                              # for Reddit tool
  "psycopg-binary",                                    # for Postgres tool
  "py-trello",                                         # for Trello tool
  "pycountry",                                         # for BaiduSearch and GoogleSearch tools
  "pydantic>=2",
  "pygithub>=2.5",                                     # for GitHub tool
  "pyjwt>=2.8",                                        # for widget API (Google OAuth token decoding)
  "pypdf",                                             # for Arxiv tool
  "python-dotenv>=1",
  "pytz",                                              # for Cal.com tool
  "pyyaml>=6",
  "redshift-connector",                                # for Redshift tool
  "replicate>=1.0.7",                                  # for Replicate tool
  "reportlab",                                         # for FileGeneration tool (PDF)
  "requests",                                          # for ClickUp, Cal.com, Zendesk, OpenWeather, ModelsLabs, API tools
  "resend",                                            # for Resend tool
  "rich",                                              # for CLI output
  "scrapegraph-py",                                    # for ScrapeGraph tool
  "slack-sdk",                                         # for Slack tool
  "spider-client",                                     # for Spider tool
  "spotipy>=2.25.1",                                   # for Spotify tool, widget API Spotify integration
  "sqlalchemy",                                        # for SQL tool
  "streamlit",                                         # for Streamlit components
  "structlog>=24.1",                                   # for structured logging
  "supabase>=2.18.1",
  "tavily-python",                                     # for Tavily tool
  "tenacity>=9.1.2",
  "todoist-api-python",                                # for Todoist tool
  "trafilatura",                                       # for Trafilatura tool
  "tweepy",                                            # for X/Twitter tool
  "twilio",                                            # for Twilio tool
  "typer>=0.16",
  "uvicorn>=0.35",                                     # for running FastAPI server (widget API)
  "watchdog>=6",                                       # for file watching (widget API)
  "watchfiles>=1",                                     # for knowledge folder watching
  "webexpythonsdk",                                    # for Webex tool
  "wikipedia",                                         # for Wikipedia tool
  "yfinance",                                          # for YFinance tool
  "youtube-transcript-api",                            # for YouTube tool
  "zep-cloud>=3.3",                                    # for Zep tool
]

urls.documentation = "https://github.com/mindroom-ai/mindroom"
urls.homepage = "https://github.com/mindroom-ai/mindroom"
urls.repository = "https://github.com/mindroom-ai/mindroom"

scripts.mindroom = "mindroom.cli:main"

[dependency-groups]
dev = [
  "aioresponses>=0.7.8",
  "markdown-code-runner>=2.4",
  "markdown-gfm-admonition",
  "matty>=0.3",
  "pre-commit>=4.2",
  "pre-commit-uv>=4.1.4",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "requests>=2.32.4",
  "ruff>=0.12.5",
  "ty>=0.0.17",
  "zensical",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = [ "src/mindroom" ]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "mindroom/_bundled_skills"

[tool.ruff]
target-version = "py312"

line-length = 120
lint.select = [
  "ALL",
]
lint.ignore = [
  "B905",    # `zip()` without an explicit `strict=` parameter
  "BLE001",  # Do not catch blind exception
  "D107",    # Missing docstring in `__init__`
  "D401",    # First line of docstring should be in imperative mood
  "D402",    # First line should not be the function's signature
  "E501",    # Line too long
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default value
  "FBT003",  # Boolean positional value in call
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "PD901",   # df is a bad variable name. Be kinder to your future self.
  "PLR0913", # Too many arguments to function call (N > 5)
  "PLR2004", # Magic value used
  "PLW0603", # Using the global statement to update `X` is discouraged
  "S101",    # Use of assert detected
  "S603",    # `subprocess` call: check for execution of untrusted input
  "S607",    # Starting a process with a partial executable path
  "SLF001",  # Private member accessed
  "T20",     # flake8-print
  "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...`
  "TD003",   # Missing issue link on the line following this TODO
]
lint.per-file-ignores."src/mindroom/tools/*" = [
  "PLC0415", #`import` should be at the top-level of a file"
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = "test_*.py"
asyncio_mode = "auto"
pythonpath = [ "src" ]
addopts = """
    -vvv
    --cov=mindroom
    --cov-report term
    --cov-report html
    --cov-report xml
    --asyncio-mode=strict
    --timeout 60
    --durations 20
"""
markers = [
  "requires_matrix: marks tests that require a real Matrix server connection (deselect with '-m \"not requires_matrix\"')",
  "e2e: marks end-to-end tests",
  "slow: marks tests as slow",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING",
  "if __name__ == .__main__.:",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = [ "src", "tests" ]

[tool.ty.rules]
deprecated = "ignore"

# Tests: suppress rules that fire on mock patterns (method-assign, attr-defined, etc.)
[[tool.ty.overrides]]
include = [ "tests/**" ]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
invalid-assignment = "ignore"
not-subscriptable = "ignore"
call-non-callable = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
not-iterable = "ignore"
unused-type-ignore-comment = "ignore"
