[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "mindroom"
description = "A universal interface for AI agents with persistent memory, where every conversation has a home"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "mindroom team" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "agno[anthropic,google,ollama,openai]==2.4.7",
  "anthropic>=0.70",
  "cerebras-cloud-sdk>=1.46",
  "chromadb>=1.0.15",
  "cron-descriptor>=1.4.5",
  "croniter>=6",
  "diskcache>=5.6.3",
  "fastapi[standard]>=0.116.1",
  "google-genai",
  "groq>=0.31",
  "httpx>=0.27",
  "humanize>=4.12.3",
  "json5>=0.13",
  "loguru>=0.7.3",
  "markdown>=3.7",
  "matrix-nio>=0.24",
  "mcp[cli]>=1.12.4",
  "mem0ai>=0.1.115",
  "openai",
  "pydantic>=2",
  "pyjwt>=2.8",
  "python-dotenv>=1",
  "pyyaml>=6",
  "rich",
  "structlog>=24.1",
  "tenacity>=9.1.2",
  "typer>=0.16",
  "uvicorn>=0.35",
  "watchfiles>=1",
]

optional-dependencies.agentql = [
  "agentql",
  "playwright",
]
optional-dependencies.airflow = [  ]
optional-dependencies.apify = [
  "apify-client>=1.12.2; platform_machine!='aarch64'",
]
optional-dependencies.arxiv = [
  "arxiv",
  "pypdf",
]
optional-dependencies.aws_lambda = [
  "boto3>=1.40.8",
]
optional-dependencies.aws_ses = [
  "boto3>=1.40.8",
]
optional-dependencies.baidusearch = [
  "baidusearch",
  "pycountry",
]
optional-dependencies.bitbucket = [
  "requests",
]
optional-dependencies.brandfetch = [
  "httpx>=0.27",
]
optional-dependencies.brightdata = [
  "requests",
]
optional-dependencies.browser = [
  "playwright",
]
optional-dependencies.browserbase = [
  "browserbase",
  "playwright",
]
optional-dependencies.cal_com = [
  "pytz",
  "requests",
]
optional-dependencies.calculator = [  ]
optional-dependencies.cartesia = [
  "cartesia",
]
optional-dependencies.claude_agent = [
  "claude-agent-sdk>=0.1.35",
]
optional-dependencies.clickup = [
  "requests",
]
optional-dependencies.coding = [  ]
optional-dependencies.composio = [
  "composio-agno",
]
optional-dependencies.config_manager = [
  "pydantic>=2",
  "pyyaml>=6",
]
optional-dependencies.confluence = [
  "atlassian-python-api",
]
optional-dependencies.crawl4ai = [
  "crawl4ai>=0.7.3",
]
optional-dependencies.csv = [
  "duckdb",
]
optional-dependencies.custom_api = [
  "requests",
]
optional-dependencies.dalle = [
  "openai",
]
optional-dependencies.daytona = [
  "daytona",
]
optional-dependencies.delegate = [  ]
optional-dependencies.desi_vocal = [
  "requests",
]
optional-dependencies.discord = [
  "requests",
]
optional-dependencies.docker = [
  "docker",
]
optional-dependencies.duckdb = [
  "duckdb",
]
optional-dependencies.duckduckgo = [
  "ddgs",
]
optional-dependencies.e2b = [
  "e2b-code-interpreter",
]
optional-dependencies.eleven_labs = [
  "elevenlabs",
]
optional-dependencies.email = [  ]
optional-dependencies.exa = [
  "exa-py",
]
optional-dependencies.fal = [
  "fal-client",
]
optional-dependencies.file = [  ]
optional-dependencies.file_generation = [
  "reportlab",
]
optional-dependencies.financial_datasets_api = [
  "requests",
]
optional-dependencies.firecrawl = [
  "firecrawl-py>=3",
]
optional-dependencies.gemini = [
  "google-genai",
]
optional-dependencies.giphy = [
  "httpx>=0.27",
]
optional-dependencies.github = [
  "pygithub>=2.5",
]
optional-dependencies.gmail = [
  "google-api-python-client>=2.178",
  "google-auth>=2.40.3",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2.2",
]
optional-dependencies.google_bigquery = [
  "google-cloud-bigquery",
]
optional-dependencies.google_calendar = [
  "google-api-python-client>=2.178",
  "google-auth>=2.40.3",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2.2",
]
optional-dependencies.google_maps = [
  "google-maps-places",
  "googlemaps",
]
optional-dependencies.google_sheets = [
  "google-api-python-client>=2.178",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2.2",
]
optional-dependencies.googlesearch = [
  "ddgs",
]
optional-dependencies.groq = [
  "groq>=0.31",
]
optional-dependencies.hackernews = [
  "httpx>=0.27",
]
optional-dependencies.homeassistant = [
  "httpx>=0.27",
]
optional-dependencies.imdb = [  ]
optional-dependencies.jina = [
  "httpx>=0.27",
  "pydantic>=2",
]
optional-dependencies.jira = [
  "jira>=3.10.5",
]
optional-dependencies.linear = [
  "requests",
]
optional-dependencies.linkup = [
  "linkup-sdk>=0.2.8",
]
optional-dependencies.lumalabs = [
  "lumaai",
]
optional-dependencies.matrix_message = [  ]
optional-dependencies.mem0 = [
  "mem0ai>=0.1.115",
]
optional-dependencies.memory = [  ]
optional-dependencies.modelslabs = [
  "requests",
]
optional-dependencies.moviepy_video_tools = [
  "moviepy",
]
optional-dependencies.neo4j = [
  "neo4j",
]
optional-dependencies.newspaper4k = [
  "lxml-html-clean",
  "newspaper4k",
]
optional-dependencies.notion = [
  "notion-client",
]
optional-dependencies.openai = [
  "openai",
]
optional-dependencies.openbb = [
  "openbb",
]
optional-dependencies.openweather = [
  "requests",
]
optional-dependencies.oxylabs = [
  "oxylabs",
]
optional-dependencies.pandas = [
  "pandas>=2.2",
]
optional-dependencies.postgres = [
  "psycopg[binary]",
]
optional-dependencies.pubmed = [
  "httpx>=0.27",
]
optional-dependencies.python = [  ]
optional-dependencies.reasoning = [  ]
optional-dependencies.reddit = [
  "praw",
]
optional-dependencies.redshift = [
  "redshift-connector",
]
optional-dependencies.replicate = [
  "replicate>=1.0.7",
]
optional-dependencies.resend = [
  "resend",
]
optional-dependencies.scheduler = [  ]
optional-dependencies.scrapegraph = [
  "scrapegraph-py",
]
optional-dependencies.searxng = [  ]
optional-dependencies.self_config = [
  "pydantic>=2",
  "pyyaml>=6",
]
optional-dependencies.serpapi = [
  "google-search-results>=2.4.2",
]
optional-dependencies.serper = [
  "requests",
]
optional-dependencies.shell = [  ]
optional-dependencies.shopify = [
  "httpx>=0.27",
]
optional-dependencies.slack = [
  "slack-sdk",
]
optional-dependencies.sleep = [  ]
optional-dependencies.spider = [
  "spider-client",
]
optional-dependencies.spotify = [
  "httpx>=0.27",
  "spotipy>=2.25.1",
]
optional-dependencies.sql = [
  "sqlalchemy",
]
optional-dependencies.subagents = [  ]
# NOTE: not a tool extra — this is for SaaS platform JWT auth (api/main.py),
# kept optional to avoid pulling in heavy transitive deps (pyiceberg, pyroaring).
optional-dependencies.supabase = [
  "supabase>=2.18.1",
]
optional-dependencies.tavily = [
  "tavily-python",
]
optional-dependencies.telegram = [
  "httpx>=0.27",
]
optional-dependencies.todoist = [
  "todoist-api-python",
]
optional-dependencies.trafilatura = [
  "trafilatura",
]
optional-dependencies.trello = [
  "py-trello",
]
optional-dependencies.twilio = [
  "twilio",
]
optional-dependencies.unsplash = [  ]
optional-dependencies.visualization = [
  "matplotlib",
]
optional-dependencies.web_browser_tools = [  ]
optional-dependencies.webex = [
  "webexpythonsdk",
]
optional-dependencies.website = [
  "beautifulsoup4",
  "httpx>=0.27",
]
optional-dependencies.whatsapp = [
  "httpx>=0.27",
]
optional-dependencies.wikipedia = [
  "wikipedia",
]
optional-dependencies.x = [
  "tweepy",
]
optional-dependencies.yfinance = [
  "yfinance",
]
optional-dependencies.youtube = [
  "youtube-transcript-api",
]
optional-dependencies.zendesk = [
  "requests",
]
optional-dependencies.zep = [
  "zep-cloud>=3.3",
]
optional-dependencies.zoom = [
  "requests",
]
urls.documentation = "https://github.com/mindroom-ai/mindroom"
urls.homepage = "https://github.com/mindroom-ai/mindroom"
urls.repository = "https://github.com/mindroom-ai/mindroom"
scripts.mindroom = "mindroom.cli:main"

[dependency-groups]
dev = [
  "aioresponses>=0.7.8",
  "markdown-code-runner>=2.4",
  "markdown-gfm-admonition",
  "matty>=0.3",
  "pre-commit>=4.2",
  "pre-commit-uv>=4.1.4",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "requests>=2.32.4",
  "ruff>=0.12.5",
  "ty>=0.0.17",
  "zensical",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = [ "src/mindroom" ]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "mindroom/_bundled_skills"

[tool.ruff]
target-version = "py312"
line-length = 120
namespace-packages = [ "src/mindroom/tool_system" ]

lint.select = [
  "ALL",
]
lint.ignore = [
  "B905",    # `zip()` without an explicit `strict=` parameter
  "BLE001",  # Do not catch blind exception
  "D107",    # Missing docstring in `__init__`
  "D401",    # First line of docstring should be in imperative mood
  "D402",    # First line should not be the function's signature
  "E501",    # Line too long
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default value
  "FBT003",  # Boolean positional value in call
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "PD901",   # df is a bad variable name. Be kinder to your future self.
  "PLR0913", # Too many arguments to function call (N > 5)
  "PLR2004", # Magic value used
  "PLW0603", # Using the global statement to update `X` is discouraged
  "S101",    # Use of assert detected
  "S603",    # `subprocess` call: check for execution of untrusted input
  "S607",    # Starting a process with a partial executable path
  "SLF001",  # Private member accessed
  "T20",     # flake8-print
  "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...`
  "TD003",   # Missing issue link on the line following this TODO
]
lint.per-file-ignores.".github/scripts/*" = [
  "INP001", # Part of an implicit namespace package (standalone scripts)
]
lint.per-file-ignores."src/mindroom/tools/*" = [
  "PLC0415", #`import` should be at the top-level of a file"
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = "test_*.py"
asyncio_mode = "auto"
pythonpath = [ "src" ]
addopts = """
    -vvv
    --cov=mindroom
    --cov-report term
    --cov-report html
    --cov-report xml
    --asyncio-mode=strict
    --timeout 60
    --durations 20
"""
markers = [
  "requires_matrix: marks tests that require a real Matrix server connection (deselect with '-m \"not requires_matrix\"')",
  "e2e: marks end-to-end tests",
  "slow: marks tests as slow",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING",
  "if __name__ == .__main__.:",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = [ "src", "tests" ]

[tool.ty.rules]
deprecated = "ignore" # FastAPI on_event deprecation; refactor to lifespan separately

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = [ "tests/" ]

[tool.ty.overrides.rules]
# Mock patterns cause many false positives in tests (e.g., mock.call_args
# returns _Call | None, attribute access on MagicMock, passing mocks as
# typed arguments).
call-non-callable = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
no-matching-overload = "ignore"
not-iterable = "ignore"
not-subscriptable = "ignore"
too-many-positional-arguments = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
