[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "platform-backend"
version = "0.1.0"
description = "MindRoom SaaS Platform Backend"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "cachetools>=6.2",
  "fastapi>=0.104.1",
  "python-dotenv>=1",
  "pyyaml>=6.0.2",
  "slowapi>=0.1.9",
  "stripe>=7",
  "supabase>=2.18.1",
  "uvicorn[standard]>=0.24",
]

[dependency-groups]
dev = [
  "pytest>=8.4",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build]
sources = { "src" = "" }
include = [
  "src/backend/**/*.py",
  "src/main.py",
]

[tool.ruff]
extend-exclude = [ "tests/conftest.py" ]
